fix overflow

--- a/src/components/Form/Form.module.scss
+++ b/src/components/Form/Form.module.scss
@@ -14,7 +14,7 @@
     z-index: 2;
     transition: margin 1s ease-out;
     width: 100%;
-    height: 100%;
+    // height: 100%;
 
     h1 {
       color: var(--Marine-blue);
