--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
 
 #root {
   width: 100%;
-  min-height: 90vh;
+  min-height: 95vh;
   display: flex;
   justify-content: center;
 }
